--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol@[VERSION]/dist/L.Control.Locate.min.css" /> -->
 
     <link rel="stylesheet" href="Control.FullScreen.css" />
+
+    <link href="https://fonts.googleapis.com/css?family=Kalam" rel="stylesheet">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
