--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,7 @@
     </noscript>
     <div id="root"></div>
     <div id="modal-root"></div>
+    <div id="modal-advisement"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
